--- a/02350SuperSimpleMVVMDemo/02350SuperSimpleMVVMDemo/View/App.xaml
+++ b/02350SuperSimpleMVVMDemo/02350SuperSimpleMVVMDemo/View/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="_02350SuperSimpleMVVMDemo.App"
+﻿<Application x:Class="_02350SuperSimpleMVVMDemo.View.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:Model="clr-namespace:_02350SuperSimpleMVVMDemo.Model"
