--- a/02350SuperSimpleMVVMDemo/02350SuperSimpleMVVMDemo/View/MainWindow.xaml
+++ b/02350SuperSimpleMVVMDemo/02350SuperSimpleMVVMDemo/View/MainWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="_02350SuperSimpleMVVMDemo.View.MainWindow"
+﻿<!-- The xmlns:ViewModel defines the ViewModel namespace so it can be used as a variable (called ViewModel) later in this XAML file. -->
+<Window x:Class="_02350SuperSimpleMVVMDemo.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ViewModel="clr-namespace:_02350SuperSimpleMVVMDemo.ViewModel"
