--- a/02350AdvancedDemo/02350AdvancedDemo/View/App.xaml
+++ b/02350AdvancedDemo/02350AdvancedDemo/View/App.xaml
@@ -4,26 +4,8 @@
              xmlns:Model="clr-namespace:_02350AdvancedDemo.Model;assembly=02350AdvancedDemo.Model"
              xmlns:View="clr-namespace:_02350AdvancedDemo.View"
              StartupUri="MainWindow.xaml">
-    <!-- This is where resources are defines for alle windows to use. -->
     <Application.Resources>
-        <!-- This Data Template tells the View (Window) how to visually show the Shape class. -->
-        <!-- This Visual description is defined in the 'NodeUserControl'. -->
-        <!-- If you remove this template the Shape will be show with a TextBlock, that shows the return value of the "ToString()" method. -->
-        <!-- The Data Type tells the WPF engine, that this Data Template should be applied for the Shape class, in the Model namespace (Java: package). -->
-        <DataTemplate DataType="{x:Type Model:Shape}">
-            <Canvas>
-                <View:ShapeUserControl/>
-            </Canvas>
-        </DataTemplate>
-        <!-- This Data Template tells the View (Window) how to visually show the Line class. -->
-        <!-- This Visual description is defined in the 'EdgeUserControl'. -->
-        <DataTemplate DataType="{x:Type Model:Line}">
-            <Canvas>
-                <View:LineUserControl/>
-            </Canvas>
-        </DataTemplate>
-        <!-- This part defines how a button should look by default, in this application. -->
-        <Style TargetType="Button">
+        <!--<Style TargetType="Button">
             <Setter Property="OverridesDefaultStyle" Value="False"/>
             <Setter Property="Margin" Value="4"/>
             <Setter Property="FontFamily" Value="Verdana"/>
@@ -38,6 +20,23 @@
                     </LinearGradientBrush>
                 </Setter.Value>
             </Setter>
-        </Style>
+        </Style>-->
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Themes/ShinyBlue.xaml"/>
+                <ResourceDictionary>
+                    <DataTemplate DataType="{x:Type Model:Shape}">
+                        <Canvas>
+                            <View:ShapeUserControl/>
+                        </Canvas>
+                    </DataTemplate>
+                    <DataTemplate DataType="{x:Type Model:Line}">
+                        <Canvas>
+                            <View:LineUserControl/>
+                        </Canvas>
+                    </DataTemplate>
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
