--- a/02350AdvancedDemo/02350AdvancedDemo/View/LineUserControl.xaml
+++ b/02350AdvancedDemo/02350AdvancedDemo/View/LineUserControl.xaml
@@ -5,5 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="100">
-    <Line Stroke="Red" X1="{Binding From.CanvasCenterX}" Y1="{Binding From.CanvasCenterY}" X2="{Binding To.CanvasCenterX}" Y2="{Binding To.CanvasCenterY}" StrokeThickness="10"/>
+    <Grid>
+        <Line Stroke="Red" X1="{Binding From.CanvasCenterX}" Y1="{Binding From.CanvasCenterY}" X2="{Binding To.CanvasCenterX}" Y2="{Binding To.CanvasCenterY}" StrokeThickness="10" StrokeDashArray="{Binding DashLength}"/>
+        <TextBox HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Label}"/>
+    </Grid>
 </UserControl>
