--- a/02350AdvancedDemo/02350AdvancedDemo/View/App.xaml
+++ b/02350AdvancedDemo/02350AdvancedDemo/View/App.xaml
@@ -1,25 +1,25 @@
 ﻿<Application x:Class="_02350AdvancedDemo.View.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:Model="clr-namespace:_02350AdvancedDemo.Model;assembly=02350AdvancedDemo.Model"
              xmlns:View="clr-namespace:_02350AdvancedDemo.View"
+             xmlns:ViewModel="clr-namespace:_02350AdvancedDemo.ViewModel"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Themes/ShinyBlue.xaml"/>
                 <ResourceDictionary>
-                    <DataTemplate DataType="{x:Type Model:Circle}">
+                    <DataTemplate DataType="{x:Type ViewModel:CircleViewModel}">
                         <Canvas>
                             <View:CircleUserControl/>
                         </Canvas>
                     </DataTemplate>
-                    <DataTemplate DataType="{x:Type Model:Square}">
+                    <DataTemplate DataType="{x:Type ViewModel:SquareViewModel}">
                         <Canvas>
                             <View:SquareUserControl/>
                         </Canvas>
                     </DataTemplate>
-                    <DataTemplate DataType="{x:Type Model:Line}">
+                    <DataTemplate DataType="{x:Type ViewModel:LineViewModel}">
                         <Canvas>
                             <View:LineUserControl/>
                         </Canvas>
